global/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: kibana
  namespace: repcustomername
spec:
  rules:
  - host: repcustomername.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: repcustomername-elk-kibana-svc
          servicePort: 443
  tls:
  - hosts:
      - repcustomername.example.com
    secretName: kibana-tls
